# seam-sdk

./: .gitignore  ASSUMPTIONS.md  Makefile  README.md  buf.gen.yaml
.github/workflows/: ci.yml  publish.yml  release-on-runtime.yml
conformance/: registry_snapshot_operator_keys.json  vectors.json
go/: go.mod
go/crypto/: crypto.go  crypto_test.go
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/com/zer07labs/seam/: SeamCrypto.java
java/src/test/java/com/zer07labs/seam/: ConformanceTest.java
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/com/zer07labs/seam/: SeamCrypto.kt
kotlin/src/test/kotlin/com/zer07labs/seam/: ConformanceTest.kt
python/: pyproject.toml
python/seam_sdk/: __init__.py  admin.py  client.py  crypto.py  errors.py
python/tests/: operator_token.py  test_admin.py  test_conformance.py  test_integration.py  test_session_budget.py  test_streamed_decode.py  test_verify_attestation.py  test_verify_decision.py
scripts/: check-contract.sh
ts/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ts/src/: admin.ts  client.ts  crypto.ts  errors.ts  index.ts
ts/tests/: admin.test.ts  conformance.test.ts  integration.test.ts  operator_token.ts  streamed_decode.test.ts  verify_attestation.test.ts  verify_decision.test.ts
verify/: Cargo.toml  DECISIONS.md  README.md
verify/docs/: audit-anchor.md  erasure-certificate.v1.md  seam-event.v1.md
verify/fixtures/: erasure_certificate_vector.json
verify/proto/seam/event/v1/: seam_event.proto
verify/src/: main.rs  verify.rs  wire.rs
verify/tests/: authenticity.rs  erasure_cert.rs  verifier.rs
verify/tests/goldens/: attested_chain.jsonl  fabricated_chain.jsonl  payload_rewrite.jsonl
